# hybrid-cosim-framework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
RateConstants/: CMakeLists.txt  README.txt  RateConstants.sa  create_fmu.ps1  test.sa
RateConstants/RateConstants/: modelDescription.xml
RateConstants/RateConstants/sources/: Fmu.cpp  RateConstants.cpp  RateConstants.h  main.cpp
RateConstants/src/: Fmu.cpp  RateConstants.cpp  RateConstants.h  main.cpp  modelDescription.xml  test_canonical.sa
RateConstants/src-gen/: .gitignore  CMakeLists.txt  Fmu.cpp  RateConstants.cpp  RateConstants.h  RateConstants_canonical.sa  main.cpp  modelDescription.xml  test_canonical.sa
notes/: hybridCosimulation-framework.xml
semantic-adaptation/: CMakeLists.txt
semantic-adaptation/src/: Empty.cpp  HyfMath.cpp  HyfMath.h  Rule.h  SemanticAdaptation.cpp  SemanticAdaptation.h
semantic_adaptation_samples/: README.md  create_deploy_fmus.ps1
semantic_adaptation_samples/Candidate/: .project  candidate.sa
semantic_adaptation_samples/Candidate/src-gen/: .gitignore  candidate_canonical.sa
semantic_adaptation_samples/CtrlMultiRate/: .project  CMakeLists.txt  create_fmu.ps1  ctrlmr.sa
semantic_adaptation_samples/CtrlMultiRate/src-gen/: .gitignore  CMakeLists.txt  CtrlMultiRate.cpp  CtrlMultiRate.h  Fmu.cpp  ctrlmr_canonical.sa  main.cpp  modelDescription.xml
semantic_adaptation_samples/CtrlProactive/: .project  CMakeLists.txt  DLoopController_FixedEuler_1Em6.fmu  create_fmu.ps1  ctrlproactive.sa
semantic_adaptation_samples/CtrlProactive/src-gen/: main.cpp  modelDescription.xml
semantic_adaptation_samples/PlantMultiRate/: .project  CMakeLists.txt  create_fmu.ps1  plantmr.sa
semantic_adaptation_samples/PlantMultiRate/src-gen/: .gitignore  CMakeLists.txt  Fmu.cpp  PlantMultiRate.cpp  PlantMultiRate.h  main.cpp  modelDescription.xml  plantmr_canonical.sa
semantic_adaptation_samples/SensorMultiRate/: .project  CMakeLists.txt  create_fmu.ps1  sensormr.sa
semantic_adaptation_samples/SensorMultiRate/SensorMultiRate/sources/: Fmu.cpp  SensorMultiRate.cpp  SensorMultiRate.h  main.cpp
semantic_adaptation_samples/SensorMultiRate/src-gen/: .gitignore  CMakeLists.txt  Fmu.cpp  SensorMultiRate.cpp  SensorMultiRate.h  main.cpp  modelDescription.xml  sensormr_canonical.sa
semantic_adaptation_samples/SensorPlantMultiRate/: .project  CMakeLists.txt  create_fmu.ps1  sensorplantmr.sa
semantic_adaptation_samples/SensorPlantMultiRate/src-gen/: .gitignore  main.cpp  sensorplantmr_canonical.sa
src/: Rule.h  SemanticAdaptation.cpp  SemanticAdaptation.h  WindowSA.cpp  WindowSA.h  fmu.cpp
test/: plot.py
window/: CMakeLists.txt
window-sa/: CMakeLists.txt
window-sa/src/: WindowSA.cpp  WindowSA.h  fmu.cpp  main.cpp
window/src/: main.cpp
window/tests/: windowTests.cpp
windowsa-fullgen/: CMakeLists.txt
windowsa-fullgen/src/: WindowSA.cpp  WindowSA.h  fmu.cpp  main.cpp
